# protein-function-baselines

./: .gitignore  DPFunc_main.py  README.md  arnav_data_preprocess.py  interpro_list.pkl  load_cafa5.py  main.py  pyproject.toml
DPFunc/: data_utils.py
DataProcess/: Process_data.ipynb  process_esm.py
